Introduced DTO instead of project list only #456 - added unit tests for service
