# sechub-administration/src/main/java/com/mercedesbenz/sechub/domain/administration/project/GetProjectsDTO.java
@@ -2,11 +2,14 @@ package com.mercedesbenz.sechub.domain.administration.project;
 
 import java.util.Optional;
 
+import jakarta.annotation.Nullable;
+
 public class GetProjectsDTO {
     private String projectId;
     private String owner;
     private boolean isOwned;
-    private Optional<String[]> assinedUsers;
+    @Nullable
+    private String[] assignedUsers;
 
     public void setProjectId(String projectId) {
         this.projectId = projectId;
@@ -16,15 +19,27 @@ public class GetProjectsDTO {
         this.owner = owner;
     }
 
-    public boolean isOwned() {
-        return isOwned;
-    }
-
     public void setOwned(boolean owned) {
         isOwned = owned;
     }
 
-    public void setAssinedUsers(Optional<String[]> assinedUsers) {
-        this.assinedUsers = assinedUsers;
+    public void setAssignedUsers(String[] assignedUsers) {
+        this.assignedUsers = assignedUsers;
+    }
+
+    public boolean isOwned() {
+        return isOwned;
+    }
+
+    public String getProjectId() {
+        return projectId;
+    }
+
+    public String getOwner() {
+        return owner;
+    }
+
+    public Optional<String[]> getAssignedUsers() {
+        return Optional.ofNullable(assignedUsers);
     }
 }
